yew-functional-macro/tests/function_attr/bad-return-type-fail.stderr
error: function components must return `yew::Html`
  --> $DIR/bad-return-type-fail.rs:10:1
   |
10 | fn comp_1(_props: &Props) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/bad-return-type-fail.rs:14:5
   |
13 | fn comp(_props: &Props) -> u32 {
   |                            --- expected `yew::virtual_dom::vnode::VNode` because of return type
14 |     1
   |     ^ expected enum `yew::virtual_dom::vnode::VNode`, found integer
